--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ theme: just-the-docs
 
 url: https://annahaensch.github.io/
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+plugins:
+  - jekyll-default-layout
+
